--- a/figures/08_exploratory_dotplot.Rmd
+++ b/figures/08_exploratory_dotplot.Rmd
@@ -46,13 +46,13 @@ row.names(dt_tn) <- dt_tn_rows
 # ----
 dt_tp <- dt_sub %>%
   corrr::correlate() %>%
-  corrr::shave() %>%
-  janitor::remove_empty(c("rows", "cols")) %>%
+  # corrr::shave() %>%
+  # janitor::remove_empty(c("rows", "cols")) %>%
   mutate_if(is.numeric, round, 2) %>%
   data.frame()
 
-dt_tp_rows <- dt_tp$rowname
-dt_tp <- dt_tp %>%
+dt_tp_rows       <- dt_tp$rowname
+dt_tp            <- dt_tp %>%
   dplyr::select(-rowname) %>%
   mutate_all(abs)
 row.names(dt_tp) <- dt_tp_rows
@@ -61,7 +61,7 @@ pheatmap::pheatmap(
   t(dt_tp),
   color = colorRampPalette(RColorBrewer::brewer.pal(n = 7, name =
                                             "Reds"))(100),
-  cluster_cols = FALSE, cluster_rows = FALSE,
+  cluster_cols = TRUE, cluster_rows = TRUE,
   na.col = "grey",
   cellheight = 7)
 # 
