--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -5,7 +5,7 @@ header-includes:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.path = "../figures/", fig.width = 5, fig.height = 5)
+knitr::opts_chunk$set(echo = TRUE, fig.path = "../figures/", fig.width = 5, fig.height = 5, eval = TRUE, warning = FALSE, message = FALSE)
 # setwd("figures")
 source("../scripts/99_utils.R")
 ```
@@ -56,7 +56,7 @@ dt <- readRDS("../data/dt.rds") %>%
 # create alpha sample size weightings
 dt <- left_join(dt, ungroup(count(group_by(dt, hu4_zoneid))), 
                 by = "hu4_zoneid") %>%
-  dplyr::filter(n >= 5) %>%
+  dplyr::filter(n >= 3) %>%
   mutate(n = n / max(n, na.rm = TRUE))
   
 # join iws ag
@@ -86,6 +86,7 @@ plot_grid(
     geom_line(stat = "smooth", method = lm, se = FALSE, aes(alpha = n))  +
     geom_smooth(aes(group = 1), method = lm, se = FALSE, 
                 color = "black", linetype = "dashed") +
+    # geom_abline(slope = 1.55, intercept = -19.86, color = "red") +
     # scale_y_log10() + scale_x_log10() +
     theme(legend.position = "") +
     labs(x = "Ag. LULC (pct, NLCD 2011)", 
@@ -131,10 +132,14 @@ brm_fit <- function(destfile, formula, data){
 # linear
 model_form <- bf(tp ~ agvpct)
 fit0 <- get_if_not_exists(brm_fit, "fit0.rds", formula = model_form, data = dt)
+print("fixed effect")
+print(fit0$formula)
 
 # linear re
 model_form <- bf(tp ~ (1 + agvpct | hu4vzoneid))
 fit <- get_if_not_exists(brm_fit, "fit.rds", formula = model_form, data = dt)
+# plot(fit)
+# print(fit$formula)
 
 # non-linear re
 model_form <- bf(tp ~ bagvpct * agvpct, 
@@ -142,6 +147,9 @@ model_form <- bf(tp ~ bagvpct * agvpct,
                    (1|hu4vzoneid), 
                  nl = TRUE)
 fit1 <- get_if_not_exists(brm_fit, "fit1.rds", formula = model_form, data = dt)
+# plot(fit1)
+print("random effects")
+print(fit1$formula)
 
 # non-linear re w/ 2nd level coeffs
 model_form2 <- bf(tp ~ bagvpct * agvpct, 
@@ -149,12 +157,17 @@ model_form2 <- bf(tp ~ bagvpct * agvpct,
                    (1|hu4vzoneid), 
                  nl = TRUE)
 fit2 <- get_if_not_exists(brm_fit, "fit2.rds", formula = model_form2, data = dt)
+print("re w/ 2nd level coeffs")
+print(fit2$formula)
+
 ```
 
-```{r model_diagnostics, echo=FALSE}
+```{r model_diagnostics_basics, echo=FALSE, fig.height=2}
 # get_variables(fit0)
 plot(fit0, pars = "agvpct")
+```
 
+```{r model_diagnostics_advanced, fig.height=4, echo=FALSE}
 # pull global distribution (lower, mean, upper)
 # get_variables(fit0)
 global_dist <- spread_draws(fit0, b_agvpct) %>%
@@ -180,6 +193,15 @@ ggplot(data = all_dist) +
 hu4_signif <-  LAGOSNEgis::query_gis(
   "HU4", "ZoneID", dplyr::filter(hu4_dist, signif)$hu4vzoneid) %>% 
   st_cast(to = "MULTIPOLYGON")
+```
+
+```{r signif_map, echo=FALSE}
+ggplot() + 
+  geom_sf(data = hu4) +
+  geom_sf(data = hu4_signif, color = "red")
+```
+
+```{r model_summary, echo=FALSE, fig.height=3}
 
 # pull 2nd level covariate distributions
 coef_signif <- bind_rows(
@@ -196,6 +218,10 @@ ggplot(data = coef_signif) +
   geom_pointrange(aes(x = var, y = `50%`, ymin = `5%`, ymax = `95%`)) +
   geom_hline(yintercept = 0, linetype = "dashed") +
   coord_flip()
+
+```
+
+```{r asdf, echo=FALSE}
 
 # plot prediction lines
 # hu4_signif$ZoneID
@@ -233,6 +259,9 @@ dplyr::filter(dt, hu4vzoneid %in% hu4_signif$ZoneID) %>%
   scale_fill_brewer() +
   facet_wrap(~ hu4vzoneid)
 
+```
+
+```{r not_signif, echo=FALSE}
 hu4_not_signif_n <- sample(unique(
   pull(
     dplyr::filter(dt, !(hu4vzoneid %in% hu4_signif$ZoneID)),
