--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -34,6 +34,10 @@ knitr::include_graphics("../figures/05_cafos-1.pdf")
 knitr::include_graphics("../figures/06_lulc_buffer_demo-1.pdf")
 ```
 
-```{r exploratory_dotplot, fig.cap = "Exploratory dotplots showing absolute value correlations.", warning=FALSE, echo = FALSE}
+```{r exploratory_heatmap, fig.cap = "Exploratory heatmap showing absolute value correlations.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/08_exploratory_dotplot-1.pdf")
+```
+
+```{r exploratory_dotplot, fig.cap = "Exploratory dotplots showing absolute value correlations.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/08_exploratory_dotplot-2.pdf")
 ```
