--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -131,13 +131,15 @@ brm_fit <- function(destfile, formula, data){
 
 # linear
 model_form <- bf(tp ~ agvpct)
-fit0 <- get_if_not_exists(brm_fit, "fit0.rds", formula = model_form, data = dt)
+fit0 <- get_if_not_exists(brm_fit, "../data/mcmc/fit0.rds", formula = model_form, 
+                          data = dt)
 print("fixed effect")
 print(fit0$formula)
 
 # linear re
 model_form <- bf(tp ~ (1 + agvpct | hu4vzoneid))
-fit <- get_if_not_exists(brm_fit, "fit.rds", formula = model_form, data = dt)
+fit <- get_if_not_exists(brm_fit, "../data/mcmc/fit.rds", formula = model_form, 
+                         data = dt)
 # plot(fit)
 # print(fit$formula)
 
@@ -146,7 +148,8 @@ model_form <- bf(tp ~ bagvpct * agvpct,
                  bagvpct ~ 1 + 
                    (1|hu4vzoneid), 
                  nl = TRUE)
-fit1 <- get_if_not_exists(brm_fit, "fit1.rds", formula = model_form, data = dt)
+fit1 <- get_if_not_exists(brm_fit, "../data/mcmc/fit1.rds", formula = model_form, 
+                          data = dt)
 # plot(fit1)
 print("random effects")
 print(fit1$formula)
@@ -156,7 +159,8 @@ model_form2 <- bf(tp ~ bagvpct * agvpct,
                  bagvpct ~ 1 + phosphorusvfertilizervuse + soybeans +
                    (1|hu4vzoneid), 
                  nl = TRUE)
-fit2 <- get_if_not_exists(brm_fit, "fit2.rds", formula = model_form2, data = dt)
+fit2 <- get_if_not_exists(brm_fit, "../data/mcmc/fit2.rds", formula = model_form2, 
+                          data = dt)
 print("re w/ 2nd level coeffs")
 print(fit2$formula)
 
