--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -22,7 +22,7 @@ knitr::include_graphics("../figures/02_hierarchical_demo-1.pdf")
 knitr::include_graphics("../figures/03_wetland_potential-1.pdf")
 ```
 
-```{r nlcd-versus-cdl, fig.cap = "Comparison between NLCD (2011) derived and CDL (2010) derived total watershed ag and watershed pasture cover.", warning=FALSE, echo = FALSE}
+```{r nlcd-versus-cdl, fig.cap = "Comparison between NLCD (2011) derived and CDL (2010) derived total watershed ag and watershed pasture cover. Line is 1:1 not regression.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/04_nlcd-versus-cdl-1.pdf")
 ```
 
