--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -34,6 +34,18 @@ knitr::include_graphics("../figures/05_cafos-1.pdf")
 knitr::include_graphics("../figures/06_lulc_buffer_demo-1.pdf")
 ```
 
+```{r lulc_vs_iws-lulc, fig.cap = "Stream buffer versus IWS lulc.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/buffer-lulc_vs_iws-lulc-1.pdf")
+```
+
+```{r big_stream_ag, fig.cap = "Stream buffer Ag >> IWS", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/satellite-1.pdf")
+```
+
+```{r small_stream_ag, fig.cap = "Stream buffer Ag << IWS", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/satellite-2.pdf")
+```
+
 ```{r exploratory_heatmap, fig.cap = "Exploratory heatmap showing absolute value correlations.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/08_exploratory_dotplot-1.pdf")
 ```
