--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -111,7 +111,7 @@ library(modelr)
 
 dt        <- readRDS("../data/dt.rds") %>% 
   dplyr::select("lagoslakeid", "hu4_zoneid", "hu12_zoneid", 
-                "tp", "hu12_ppt_mean", "hu12_baseflow_mean",
+                "tp", "tn", "hu12_ppt_mean", "hu12_baseflow_mean",
                 "maxdepth", "iwsla_ratio", "ag", "row_crop_pct", "corn", 
                 "soybeans", "pasture", 
                 "phosphorus_fertilizer_use", "nitrogen_fertilizer_use")
@@ -121,7 +121,8 @@ dt        <- dplyr::filter(dt,
                            !is.na(soybeans), 
                            !is.na(corn),
                            !is.na(maxdepth), 
-                           !is.na(tp))
+                           !is.na(tp), 
+                           !is.na(tn))
 dt <- mutate_at(dt, scale, .vars = vars(-lagoslakeid, -hu4vzoneid, -hu12vzoneid))
 
 good_hu4s <- readRDS("../data/dt.rds") %>%
@@ -142,10 +143,12 @@ brm_fit <- function(destfile, formula, data){
 # ag + {maxdepth, baseflow, iwslavratio}
 
 (model_forms <- list(
-  "ag" = bf(tp ~ ag), 
-  "depth+bf" = bf(tp ~ ag + maxdepth + hu12vbaseflowvmean),
-  "depth+iwsla" = bf(tp ~ ag + maxdepth + iwslavratio), 
-  "all" = bf(tp ~ ag + maxdepth + hu12vbaseflowvmean + iwslavratio) 
+  "tp_depth+bf" = bf(tp ~ ag + maxdepth + hu12vbaseflowvmean),
+  "tp_depth+iwsla" = bf(tp ~ ag + maxdepth + iwslavratio), 
+  "tp_fe" = bf(tp ~ ag + maxdepth + hu12vbaseflowvmean + iwslavratio), 
+  "tn_depth+bf" = bf(tn ~ ag + maxdepth + hu12vbaseflowvmean),
+  "tn_depth+iwsla" = bf(tn ~ ag + maxdepth + iwslavratio), 
+  "tn_fe" = bf(tn ~ ag + maxdepth + hu12vbaseflowvmean + iwslavratio) 
 ))
 
 fe_brms <- 
@@ -159,13 +162,35 @@ fe_brms <-
 dplyr::bind_rows(
   lapply(fe_brms, function(x) data.frame(brms::bayes_R2(x)))) %>%
   mutate(Model = names(model_forms), 
-         Response = "TP", 
          Estimate = round(Estimate, 2)) %>%
-  dplyr::select(Response, Model, Estimate) 
+  dplyr::select(Model, Estimate) 
 
 
 # evaulate spatial random effects
 # {fixed effects} + 1/ag, 1/soybeans, 1/corn
+(model_forms <- list(
+  "tp_ag" = bf(tp ~  maxdepth + hu12vbaseflowvmean +
+                   (1 + ag | hu4vzoneid)),
+  "tp_soybeans" = bf(tp ~  maxdepth + hu12vbaseflowvmean +
+                   (1 + soybeans | hu4vzoneid)),
+  "tp_re" = bf(tp ~  maxdepth + hu12vbaseflowvmean +
+                   (1 + ag + soybeans | hu4vzoneid))
+))
+
+
+re_brms <- 
+  lapply(seq_along(model_forms), function(i) 
+    get_if_not_exists(brm_fit, 
+                      paste0("../data/mcmc/re/", names(model_forms)[i]), 
+                      formula = model_forms[[i]], 
+                      data = dt))
+
+
+dplyr::bind_rows(
+  lapply(re_brms, function(x) data.frame(brms::bayes_R2(x)))) %>%
+  mutate(Model = names(model_forms), 
+         Estimate = round(Estimate, 2)) %>%
+  dplyr::select(Model, Estimate)
 
 
 # linear
